# python-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  fuzz.yml  lint.yml  mutation.yml  slow-ci.yml  taint.yml  test.yml  typecheck.yml
src/python_agent/: CLAUDE.md  __init__.py  agent_utils.py  call_graph.py  coding_agent.py  convergence_agent.py  dag_integrity.py  dag_utils.py  discovery_agent.py  divergence_agent.py  ontology.py  planning_agent.py  rules.py  tool_guard.py  types.py
tests/: test_agent_utils.py  test_call_graph.py  test_coding_agent.py  test_convergence_agent.py  test_dag_integrity.py  test_dag_utils.py  test_discovery_agent.py  test_divergence_agent.py  test_fuzz.py  test_injection_defense.py  test_ontology.py  test_planning_agent.py  test_rules.py  test_tool_guard.py
