[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-agent"
version = "0.1.0"
description = "Claude-powered Python coding and planning agents with enforced quality standards"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
authors = [
    {name = "Ed Hodapp", email = "ed@hodapp.com"},
]
dependencies = [
    "claude-agent-sdk",
]

[project.optional-dependencies]
dev = [
    "hypothesis",
    "mutmut<3",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]

[project.scripts]
coding-agent = "python_agent.coding_agent:main"
planning-agent = "python_agent.planning_agent:main"
discovery-agent = "python_agent.discovery_agent:main"
divergence-agent = "python_agent.divergence_agent:main"

[project.urls]
Homepage = "https://github.com/edhodapp/python-agent"
Repository = "https://github.com/edhodapp/python-agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_agent = ["CLAUDE.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-complexity = 5
max-line-length = 99

[tool.mutmut]
paths_to_mutate = "src/python_agent/"
runner = ".venv/bin/python -m pytest"
