[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-agent"
version = "0.1.0"
description = "Claude-powered Python coding and planning agents with enforced quality standards"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
authors = [
    {name = "Ed Hodapp", email = "ed@hodapp.com"},
]
dependencies = [
    "claude-agent-sdk",
    "pydantic>=2.12",
]

[project.optional-dependencies]
dev = [
    "flake8-pyproject",
    "hypothesis",
    "mutmut<3",
    "mypy",
    "pydantic>=2.12",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]

[project.scripts]
coding-agent = "python_agent.coding_agent:main"
planning-agent = "python_agent.planning_agent:main"
discovery-agent = "python_agent.discovery_agent:main"
divergence-agent = "python_agent.divergence_agent:main"
convergence-agent = "python_agent.convergence_agent:main"
call-graph = "python_agent.call_graph:main"

[project.urls]
Homepage = "https://github.com/edhodapp/python-agent"
Repository = "https://github.com/edhodapp/python-agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_agent = ["CLAUDE.md", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-complexity = 5
max-line-length = 99

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.mutmut]
paths_to_mutate = "src/python_agent/"
runner = ".venv/bin/python -m pytest"
