[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aofire-python-agent"
version = "0.2.0"
description = "Claude-powered Python coding and planning agents with enforced quality standards"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    {name = "Ed Hodapp", email = "ed@hodapp.com"},
]
dependencies = [
    "claude-agent-sdk",
    "pydantic>=2.12",
]

[project.optional-dependencies]
dev = [
    "flake8-pyproject",
    "hypothesis",
    "mutmut<3",
    "mypy",
    "pydantic>=2.12",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]

[project.scripts]
aofire-coding-agent = "python_agent.coding_agent:main"
aofire-planning-agent = "python_agent.planning_agent:main"
aofire-discovery-agent = "python_agent.discovery_agent:main"
aofire-divergence-agent = "python_agent.divergence_agent:main"
aofire-convergence-agent = "python_agent.convergence_agent:main"
aofire-call-graph = "python_agent.call_graph:main"

[project.urls]
Homepage = "https://github.com/edhodapp/python-agent"
Repository = "https://github.com/edhodapp/python-agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_agent = ["CLAUDE.md", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-complexity = 5
max-line-length = 99

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.mutmut]
paths_to_mutate = "src/python_agent/"
runner = ".venv/bin/python -m pytest"
